// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keyValueField > should add error with unvalidated regex 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
      >
        <div
          class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
        >
          <div
            class="uv_5jnvwo2 uv_x6hyh50 uv_x6hyh511"
            style="--uv_3mg8xe0: 1fr 1fr auto; --uv_3mg8xe1: 1fr 1fr auto; --uv_3mg8xe2: 1fr 1fr auto; --uv_3mg8xe3: 1fr 1fr auto; --uv_3mg8xe4: 1fr 1fr auto; --uv_3mg8xe5: 1fr 1fr auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <label
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                for="_r_q_"
              >
                key
              </label>
              <div
                class="uv_q3q8048 uv_q3q8045"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  class="uv_q3q8049"
                  data-size="large"
                  id="_r_q_"
                  name="test.0.key"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <label
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                for="_r_10_"
              >
                value
              </label>
              <div
                class="uv_q3q8048 uv_q3q8045"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="uv_q3q8049"
                  data-size="large"
                  id="_r_10_"
                  name="test.0.value"
                  type="text"
                  value="a"
                />
              </div>
            </div>
            <button
              class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoee uv_e1wcoek uv_e1wcoew"
              data-testid="remove-button-0"
              type="button"
            >
              <span
                class="uv_u0p5n50"
              >
                Delete
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u2j uv_toi52u6j"
        >
          <div
            class="uv_1y5sygv5"
          >
            <button
              class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoek uv_e1wcoeu"
              data-testid="add-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should disable submit button when required and empty 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
      >
        <div
          class="uv_toi52u0 uv_toi52u2j uv_toi52u6j"
        >
          <button
            class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoek uv_e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
      ,
      <button
        class="uv_e1wcoe0 uv_e1wcoe2 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        disabled=""
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should enable submit button when typing on key with regex and nothing required 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
      >
        <div
          class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
        >
          <div
            class="uv_5jnvwo2 uv_x6hyh50 uv_x6hyh511"
            style="--uv_3mg8xe0: 1fr 1fr auto; --uv_3mg8xe1: 1fr 1fr auto; --uv_3mg8xe2: 1fr 1fr auto; --uv_3mg8xe3: 1fr 1fr auto; --uv_3mg8xe4: 1fr 1fr auto; --uv_3mg8xe5: 1fr 1fr auto;"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <label
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                for="_r_1k_"
              >
                key
              </label>
              <div
                class="uv_q3q8048 uv_q3q8045"
                data-disabled="false"
                data-error="true"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-describedby="error-key-0"
                  aria-invalid="true"
                  class="uv_q3q8049"
                  data-size="large"
                  id="_r_1k_"
                  name="test.0.key"
                  type="text"
                  value="a@"
                />
                <div
                  class="uv_q3q8042 uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u3p"
                >
                  <svg
                    aria-hidden="true"
                    class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzb uv_icons_1sbwqkzg uv_icons_1sbwqkz1k"
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14M8 4a.75.75 0 0 1 .75.75v3a.75.75 0 0 1-1.5 0v-3A.75.75 0 0 1 8 4m0 8a1 1 0 1 0 0-2 1 1 0 0 0 0 2"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <label
                class="uv_17td3g92 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                for="_r_1q_"
              >
                value
              </label>
              <div
                class="uv_q3q8048 uv_q3q8045"
                data-disabled="false"
                data-error="false"
                data-readonly="false"
                data-success="false"
              >
                <input
                  aria-invalid="false"
                  autocomplete="off"
                  class="uv_q3q8049"
                  data-size="large"
                  id="_r_1q_"
                  name="test.0.value"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <button
              class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe6 uv_e1wcoee uv_e1wcoek uv_e1wcoew"
              data-testid="remove-button-0"
              type="button"
            >
              <span
                class="uv_u0p5n50"
              >
                Delete
              </span>
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M5 3.25V4H2.75a.75.75 0 0 0 0 1.5h.3l.815 8.15A1.5 1.5 0 0 0 5.357 15h5.286a1.5 1.5 0 0 0 1.492-1.35l.815-8.15h.3a.75.75 0 0 0 0-1.5H11v-.75A2.25 2.25 0 0 0 8.75 1h-1.5A2.25 2.25 0 0 0 5 3.25m2.25-.75a.75.75 0 0 0-.75.75V4h3v-.75a.75.75 0 0 0-.75-.75zM6.05 6a.75.75 0 0 1 .787.713l.275 5.5a.75.75 0 0 1-1.498.075l-.275-5.5A.75.75 0 0 1 6.05 6m3.9 0a.75.75 0 0 1 .712.787l-.275 5.5a.75.75 0 0 1-1.498-.075l.275-5.5a.75.75 0 0 1 .786-.711"
                  fill-rule="evenodd"
                />
              </svg>
            </button>
            <span
              class="uv_5jnvwo0 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow9 uv_m4c9owp uv_m4c9ow1a uv_m4c9ow2m"
              id="error-key-0"
              role="status"
            >
              This field should match the regex ^[a-zA-Z]*$
            </span>
          </div>
        </div>
        <div
          class="uv_toi52u0 uv_toi52u2j uv_toi52u6j"
        >
          <button
            class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoek uv_e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              focusable="false"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
      ,
      <button
        class="uv_e1wcoe0 uv_e1wcoe2 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoei uv_e1wcoel"
        disabled=""
        type="submit"
      >
        Submit
      </button>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props & max size 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
      >
        <div
          class="uv_toi52u0 uv_toi52u2j uv_toi52u6j"
        >
          <div
            class="uv_1y5sygv5"
          >
            <button
              class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoek uv_e1wcoeu"
              data-testid="add-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
      >
        <div
          class="uv_toi52u0 uv_toi52u2j uv_toi52u6j"
        >
          <div
            class="uv_1y5sygv5"
          >
            <button
              class="uv_e1wcoe0 uv_e1wcoe1 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoek uv_e1wcoeu"
              data-testid="add-button"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`keyValueField > should render with default props in readonly mode 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u41"
      >
        <div
          class="uv_toi52u0 uv_toi52u2j uv_toi52u6j"
        >
          <div
            class="uv_1y5sygv5"
            tabindex="0"
          >
            <button
              class="uv_e1wcoe0 uv_e1wcoe2 uv_e1wcoe3 uv_e1wcoe9 uv_e1wcoee uv_e1wcoek uv_e1wcoeu"
              data-testid="add-button"
              disabled=""
              type="button"
            >
              <svg
                aria-hidden="true"
                class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkzr"
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <path
                  d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
                />
              </svg>
              add
            </button>
          </div>
        </div>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
